[gd_scene load_steps=5 format=3 uid="uid://bpsffkrmkvxsa"]

[ext_resource type="Texture2D" uid="uid://cet4cekw32tsa" path="res://Assets/base.png" id="1_33uix"]
[ext_resource type="Script" path="res://Scripts/ground.gd" id="1_hqq5y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydsj8"]
size = Vector2(336, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hb28"]
size = Vector2(336, 20)

[node name="Ground" type="Node2D"]
script = ExtResource("1_hqq5y")

[node name="Ground1" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ground1"]
texture = ExtResource("1_33uix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground1"]
position = Vector2(1, -54)
shape = SubResource("RectangleShape2D_ydsj8")

[node name="Ground2" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ground2"]
position = Vector2(336, 0)
texture = ExtResource("1_33uix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(337, -54)
shape = SubResource("RectangleShape2D_6hb28")

[connection signal="body_entered" from="Ground1" to="." method="_on_ground_1_body_entered"]
[connection signal="body_entered" from="Ground2" to="." method="_on_ground_2_body_entered"]
